full_build.txt
   Compiling tt v0.1.0 (D:\GRC-Ajam\rust-playground)
warning: unused import: `std::path::PathBuf`
 --> src\models\config.rs:6:5
  |
6 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Weekday`
 --> src\models\week.rs:3:45
  |
3 | use chrono::{Datelike, Duration, NaiveDate, Weekday};
  |                                             ^^^^^^^

warning: unused import: `File`
 --> src\storage\task.rs:3:21
  |
3 | use std::fs::{self, File, OpenOptions};
  |                     ^^^^

warning: unused imports: `Result` and `TtError`
  --> src\storage\task.rs:10:20
   |
10 | use crate::error::{Result, StorageError, StorageResult, TtError};
   |                    ^^^^^^                               ^^^^^^^

warning: unused import: `Path`
 --> src\storage\log.rs:4:17
  |
4 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused imports: `Result` and `TtError`
 --> src\storage\log.rs:6:20
  |
6 | use crate::error::{Result, StorageError, StorageResult, TtError};
  |                    ^^^^^^                               ^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\cli\commands.rs:3:5
  |
3 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::storage::Project`
 --> src\cli\format.rs:4:5
  |
4 | use crate::storage::Project;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\storage\task.rs:224:51
    |
224 |         let mut git_item = toml_edit::Item::Table(git_doc);
    |                            ---------------------- ^^^^^^^ expected `Table`, found `DocumentMut`
    |                            |
    |                            arguments to this enum variant are incorrect
    |
note: tuple variant defined here
   --> C:\Users\Thinkpad\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\toml_edit-0.22.27\src\item.rs:18:5
    |
 18 |     Table(Table),
    |     ^^^^^

error[E0308]: mismatched types
  --> src\cli\commands.rs:68:14
   |
68 |           } => {
   |  ______________^
69 | |             // Search disabled temporarily
70 | |             println!("Search feature temporarily disabled due to dependency.compatibility issues.");
71 | |             println!("Use 'tt ls' to list tasks instead.");
72 | |         },
   | |_________^ expected `Result<(), TtError>`, found `()`
   |
   = note:   expected enum `std::result::Result<(), TtError>`
           found unit type `()`

warning: value assigned to `current_section` is never read
   --> src\reports\weekly.rs:425:31
    |
425 |     let mut current_section = String::new();
    |                               ^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `workspace`
   --> src\cli\commands.rs:117:9
    |
117 |     let workspace = Workspace::init(cwd.clone())?;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_workspace`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `now`
   --> src\cli\commands.rs:182:9
    |
182 |     let now = Local::now();
    |         ^^^ help: if this is intentional, prefix it with an underscore: `_now`

warning: unused variable: `project`
  --> src\cli\format.rs:15:38
   |
15 |     pub fn for_task_add(task: &Task, project: &str) -> Self {
   |                                      ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project`

warning: unused variable: `project`
  --> src\cli\format.rs:24:40
   |
24 |     pub fn for_task_start(task: &Task, project: &str) -> Self {
   |                                        ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project`

warning: unused variable: `project`
  --> src\cli\format.rs:33:39
   |
33 |     pub fn for_task_done(task: &Task, project: &str) -> Self {
   |                                       ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project`

warning: unused variable: `suffix`
   --> src\cli\format.rs:108:18
    |
108 |     let (prefix, suffix) = match color {
    |                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_suffix`

For more information about this error, try `rustc --explain E0308`.
warning: `tt` (lib) generated 15 warnings
error: could not compile `tt` (lib) due to 2 previous errors; 15 warnings emitted
